tests/vrs/methods/methods_04_empty_body_expected.txt
error: expected one of `~`, `!`, `integer literal`, `boolean literal`, `identifier`, `if`, `exists`, `forall`, or `(`, found `}`
     --> tests/vrs/methods/methods_04_empty_body.vrs:6:5
      |
    6 |      }
      |      ^ expected one of 9 possible tokens
